...
    @FocusState private var isfocus : Bool
    @State var selectrow = Set<Employee>()
    @State var sendattendeneslist: [Employee] = []
    @State var attendeneslist: [Employee] = []
    //  @State var attendeeslist = [Employee]()
    @State var text = ""
    @State var type = "Online"
    var ref = Database.database().reference()
    let userid = Auth.auth().currentUser!.uid
    @State var Isselectattendense = false
    @State var isSelectedinline = true
    @State var IsSelectedSite = false
    @State var presentAlert = false
...

    var body: some View {
        NavigationView{
            ScrollView {
        VStack{
            VStack(alignment: .leading) {
                Text("Title")
                    .font(.system(size: 14, weight: .medium))
                    .foregroundColor(Color(UIColor(named: "LightGray")!))
                TextField("type title of the meeting", text: $title)
                    
                    .padding(10)
                    .overlay(RoundedRectangle(cornerRadius: 7, style: .continuous)
                                .stroke(title.isEmpty ?
                                        Color(UIColor(named: "LightGray")!) :
                                            Color(UIColor(named: "Blue")!) , lineWidth: 0.5))
...
            .padding().padding(.top)
         
            VStack(alignment: .leading) {
                Text("Location")
                    .font(.system(size: 14, weight: .medium))
                    .foregroundColor(Color(UIColor(named: "LightGray")!))
                TextField("type the location", text: $location)
                  
                 
                    .padding(10)
                    .overlay(RoundedRectangle(cornerRadius: 7, style: .continuous)
                                .stroke(location.isEmpty ?
                                        Color(UIColor(named: "LightGray")!) :
...
                HStack{
                Text("Date:")
                    .font(.system(size: 14, weight: .medium))
                    .foregroundColor(Color(UIColor(named: "LightGray")!))
                
                  DatePicker(
                        "Start Date",
                        selection: $date,
                        in: Date.now..., displayedComponents: [.date]
                  ).labelsHidden().fixedSize().frame(maxWidth: .infinity/2,maxHeight: 44, alignment: .leading).background(.gray.opacity(0.0)).cornerRadius(7).border(.white.opacity(0.4))
                    
                }
            }.padding()
            VStack(alignment: .leading){
                HStack(){
                    HStack{
                Text("Start time:")
                    .font(.system(size: 14, weight: .medium))
                    .foregroundColor(Color(UIColor(named: "LightGray")!))
                    
                    DatePicker(
                          "Start time",
                          selection: $starttime,
                          in: Date.now..., displayedComponents: [.hourAndMinute ]
                    ).labelsHidden().padding(.trailing).fixedSize().frame(maxWidth: .infinity/2,maxHeight: 44, alignment: .leading).background(.gray.opacity(0.0)).cornerRadius(7).border(.white.opacity(0.4)).environment(\.timeZone, TimeZone(abbreviation: "GMT+3")!)}
                    HStack{
                    Text("End time:")
                        .font(.system(size: 14, weight: .medium))
                    .foregroundColor(Color(UIColor(named: "LightGray")!))
                        
                        DatePicker(
                              "End time",
                              selection: $endtime,
...
                            }
                            .padding()
                            .foregroundColor(.gray.opacity(0.7))
                            .background(.white)
                            .border(.gray.opacity(0.7),width: 2)
                            .cornerRadius(25)
                            .accessibilityIdentifier("Add Participants")
                        }
                    }
                }
                }
                .padding(.horizontal)
            
...
                    Generate()
                    dismiss()
                }
            }
                label: {
                HStack{
                    Text("Save")
                        .foregroundColor(Color("Blue"))
                    Circle().fill(
                        LinearGradient(gradient: Gradient(colors: [
                            Color(UIColor(named: "Blue")!),
                            Color(UIColor(named: "LightTeal")!)]),
                                       startPoint: .leading, endPoint: .trailing)).frame(width: 50, height: 50).overlay(Image(systemName: "chevron.right").foregroundColor(.white)    .font(.largeTitle)
...
            })
            }
            .padding(.trailing).task{
                viewModel.fetchDatalist()
            }
            .preferredColorScheme(.light)
        }.navigationBarTitle("Generate Meeting").toolbar {
            ToolbarItem(placement: .navigationBarLeading) {
                Button {
                    dismiss()
                } label: {
                    HStack{
                        Image(systemName: "chevron.left")
                        Text("Back")
                        }
                        .foregroundColor(Color("Blue"))
                    }
            }
        }
        }.navigationBarTitleDisplayMode(.inline).toolbar {
...
                    Button {
                        isfocus = false
                           } label: {
                           
                               HStack{
                                 
                                   Text("Done").foregroundColor(Color("Blue"))
                               

                           }

                       }
                }
...
              
                if datecompstart == datecompcurrent {
                    print("true")
                
                 if AmOrPMend == "PM" && AmOrPM == "AM"
                  {
                     error0 = "Please enter a valid time"
                     return false
                 }
                 if AmOrPMend == AmOrPM {
                     if hourin == "12" && endhour == "12"{
                         if minuted <= minutesend {
                             print("1")
...
        if starttime >= endtime {
            error0 = "Please enter a valid time"
                    return false
        }
 
        if title == "" {
            error0 = "All fields are required"
            return false
    
        }
        
        if location == "" {
            error0 = "All fields are required"
...
