...
                    Section(header: Text("Acccount Information").font(.callout)
                                .padding(.leading).padding(.bottom, 1)) {
                        VStack(alignment: .leading) {
                            Text("Employee Name")
                                .font(.system(size: 14, weight: .medium))
                                .foregroundColor(Color(UIColor(named: "LightGray")!))
                            TextField("type your name", text: $viewModel.Employeeinfolist1)
                                
                                .autocapitalization(.none)
                                .padding(10)
                                .overlay(RoundedRectangle(cornerRadius: 7, style: .continuous)
                                            .stroke(Ename ?
                                            .red :
...
                        .animation(.default).padding(.horizontal)
                        //Email
                        VStack(alignment: .leading) {
                            Text("Email")
                                .font(.system(size: 14, weight: .medium))
                                .foregroundColor(Color(UIColor(named: "LightGray")!))
                            TextField("type your email", text: $viewModel.email).disabled(true)
                                .keyboardType(.emailAddress)
                                .autocapitalization(.none)
                                .padding(10).background(.gray.opacity(0.25))
                                .overlay(RoundedRectangle(cornerRadius: 7, style: .continuous)
                                            .stroke(.gray, lineWidth: 0.5))
                                .foregroundColor(.gray)
...
                        VStack(alignment: .leading) {
                            Text("Password")
                                .font(.system(size: 14, weight: .medium))
                                .foregroundColor(Color(UIColor(named: "LightGray")!))
                            HStack{
                                if !isVisible {
                                    SecureField("type your new password", text: $password)
                                }
                                else {
                                    TextField("type your new password", text: $password)
                                }
                                Button {
                                    withAnimation{
...
                        VStack(alignment: .leading) {
                            Text("Confirm Password")
                                .font(.system(size: 14, weight: .medium))
                                .foregroundColor(Color(UIColor(named: "LightGray")!))
                            HStack{
                                if !isVisible0 {
                                    SecureField("type the confirm password", text: $passwordAgain)
                                }
                                else {
                                    TextField("type the confirm password", text: $passwordAgain)
                                }
                                Button {
                                    withAnimation{
...
                     Section(header: Text("Personal Information").font(.callout)
                                .padding(.leading).padding(.bottom, 1).padding(.top,40.0)) {
                         VStack(alignment: .leading) {
                             Text("Phone Number")
                                 .font(.system(size: 14, weight: .medium))
                                 .foregroundColor(Color(UIColor(named: "LightGray")!))
                             TextField("type your phone number", text: $viewModel.phonemum)
                                 .keyboardType(.numberPad)
                                 .autocapitalization(.none)
                                 .padding(10)
                                 .overlay(RoundedRectangle(cornerRadius: 7, style: .continuous)
                                             .stroke(Ephone ?
                                                        .red :
...
                        else {
                            dismiss()}
                    }
                    }
                    label: {
                    HStack{
                        Text("Update")
                            .fontWeight(.semibold)
                            .foregroundColor(Color("Blue"))
                        Circle().fill(
                            LinearGradient(gradient: Gradient(colors: [
                                Color(UIColor(named: "Blue")!),
                                Color(UIColor(named: "LightTeal")!)]),
...
                error0 = "All fields are required"
                return false}
            if  viewModel.Employeeinfolist1 == "" {
                error0 = "All fields are required"
                return false}
                if !viewModel.phonemum.hasPrefix("05"){
                    error0 = "The phone number must start with 05"

                    return false}
            if (viewModel.phonemum.count != 10){
                error0 = "The phone number must be numbers"
                        return false }
            if (viewModel.Employeeinfolist1.count <= 2 || viewModel.Employeeinfolist1.count >= 20){
...
                    error0 = "The name must contain characters only"

                   return false
                }
             }
        if password != passwordAgain{
                    error0 = "The new password and the confirm password must be the same"
                    return false
                }
              
                if (password.count != 0 && password.count <= 6)  {
                    error0 = "the length of password must be at least 7 "

...
