...
            self.localizedDescription
        }
        
        var errorDescription: String?{
            switch self {
            case .invalidCredentials:
                return NSLocalizedString("Email or password are incorrect. Try again.", comment: "")
            case .deniedAccess:
                return NSLocalizedString("You have denied access. You can allow access from the Settings.", comment: "")
            case .noFaceIdEnrolled:
                return NSLocalizedString("In order to use Face ID, make sure to activate it first through the settings.", comment: "")
            case .noFingerprintEnrolled:
                return NSLocalizedString("In order to use Touch ID, make sure to activate it first through the settings.", comment: "")
...
                return NSLocalizedString("Your credentials have not been saved yet. Would you like to save them?", comment: "")
            case .resetPassword:
                return NSLocalizedString("Your email does not match our records. Please try again or contact your organization.", comment: "")
            case .invalidPassword:
                return NSLocalizedString("Email or password are incorrect. Try again.", comment: "")
            case .emptyCredentials:
                return NSLocalizedString("Credentials should not be empty", comment: "")
            case .exceededAttempts:
                return NSLocalizedString("You have exceeded your attempts. Please login normally.", comment: "")
            case .cancelled:
                return NSLocalizedString("Operation was cancelled by the user.", comment: "")
            case .alreadyLoggedIn:
                return NSLocalizedString("Unable to login, make sure to sign out of any other device.", comment: "")
            }
            
        }
    }
    // MARK: - Function that checks the device bimoetric type and returns it
    func biometricType()-> BiometricType{
...
    /// If the user had not enrolled it will return a 'noFaceIdEnrolled' or 'noFingerprintEnrolled' error
    /// Otherwise the function returns the user's credentials
    func requestBiometricUnlock(completion: @escaping (Result<Credentials, AuthenticationError>) -> Void) {
        let credentials = KeychainStorage.getCredentials()
        guard let credentials = credentials else {
            completion(.failure(.credentialsNotSaved))
            return
        }
        
        let context = LAContext()
        var error: NSError?
        let canEvaluate = context.canEvaluatePolicy(.deviceOwnerAuthenticationWithBiometrics, error: &error)
        
...
