...
        NavigationView {
            VStack(spacing: 10){
                // navigate to calendar view
                Button{
                    calendarView.toggle()
                } label: {
                    Text("Calendar")
                }
                .fullScreenCover(isPresented: $calendarView) {
                    CalendarView(viewRouter: viewRouter)
                }
                
                // navigate to profile view
                Button{
                    profileView.toggle()
                } label: {
                    Text("Profile")
                }
                .fullScreenCover(isPresented: $profileView) {
                    UserProfileView()
                }
                // navigate to services view
                Button{
...
